--- a/app/design/frontend/base/default/template/email/productalert/stock.phtml
+++ b/app/design/frontend/base/default/template/email/productalert/stock.phtml
@@ -6,13 +6,11 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * @var Mage_ProductAlert_Block_Email_Stock $this
- */
+/** @var Mage_ProductAlert_Block_Email_Stock $this */
 ?>
 <?php if ($products = $this->getProducts()): ?>
 <p><?= $this->__('You are receiving this notification because you subscribed to receive alerts when the following products are back in stock:') ?></p>
