--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -15,7 +15,7 @@
 <header id="header" class="page-header">
     <div class="page-header-container skip-links">
         <div>
-            <a href="#header-nav" class="skip-link skip-nav" data-target-element="header-nav">
+            <a href="#header-nav" class="skip-link skip-nav" data-target-element="header-nav" title="<?= $this->__('Menu') ?>">
                 <span class="icon"></span>
                 <span class="label"><?= $this->__('Menu') ?></span>
             </a>
