--- a/app/design/frontend/base/default/template/checkout/cart/minicart/items.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/minicart/items.phtml
@@ -6,15 +6,11 @@
  * @package     rwd_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2022 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * Shoping cart sidebar
- *
- * @var Mage_Checkout_Block_Cart_Minicart $this
- */
+/** @var Mage_Checkout_Block_Cart_Minicart $this */
 ?>
 
 <?php
