--- a/app/design/frontend/base/default/template/configurableswatches/catalog/layer/filter/swatches.phtml
+++ b/app/design/frontend/base/default/template/configurableswatches/catalog/layer/filter/swatches.phtml
@@ -6,16 +6,13 @@
  * @package     rwd_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Catalog_Block_Layer_Filter_Attribute $this */
 ?>
 <?php
-/**
- * Template for filter items block
- *
- * @var Mage_Catalog_Block_Layer_Filter_Attribute $this
- */
 
 $_dimHelper = Mage::helper('configurableswatches/swatchdimensions');
 $_swatchInnerWidth = $_dimHelper->getInnerWidth(Mage_ConfigurableSwatches_Helper_Swatchdimensions::AREA_LAYER);
