--- a/app/design/adminhtml/default/default/template/maho/captcha/captcha.phtml
+++ b/app/design/adminhtml/default/default/template/maho/captcha/captcha.phtml
@@ -7,7 +7,7 @@
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 
-$helper = Mage::helper('maho_captcha');
+$helper = Mage::helper('captcha');
 if (!$helper->isEnabled()) return;
 $challengeUrl = $helper->getChallengeUrl();
 ?><script>
